# rabbitmq-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  create_project.sh  docker-compose.yml  pyproject.toml
src/rabbitmq_mcp_server/: __init__.py  api_client.py  config.py  decoder.py  server.py  tools.py
